; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/ngatm/netnatm/api/extr_cc_port.c_cc_port_isrunning.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/ngatm/netnatm/api/extr_cc_port.c_cc_port_isrunning.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ccdata = type { i32 }
%struct.ccport = type { i64 }

@ENOENT = common dso_local global i32 0, align 4
@CCPORT_RUNNING = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cc_port_isrunning(%struct.ccdata* %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.ccdata*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca %struct.ccport*, align 8
  store %struct.ccdata* %0, %struct.ccdata** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  %9 = load %struct.ccdata*, %struct.ccdata** %5, align 8
  %10 = load i32, i32* %6, align 4
  %11 = call %struct.ccport* @find_port(%struct.ccdata* %9, i32 %10)
  store %struct.ccport* %11, %struct.ccport** %8, align 8
  %12 = icmp eq %struct.ccport* %11, null
  br i1 %12, label %13, label %15

13:                                               ; preds = %3
  %14 = load i32, i32* @ENOENT, align 4
  store i32 %14, i32* %4, align 4
  br label %26

15:                                               ; preds = %3
  %16 = load %struct.ccport*, %struct.ccport** %8, align 8
  %17 = getelementptr inbounds %struct.ccport, %struct.ccport* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = load i64, i64* @CCPORT_RUNNING, align 8
  %20 = icmp eq i64 %18, %19
  br i1 %20, label %21, label %23

21:                                               ; preds = %15
  %22 = load i32*, i32** %7, align 8
  store i32 1, i32* %22, align 4
  br label %25

23:                                               ; preds = %15
  %24 = load i32*, i32** %7, align 8
  store i32 0, i32* %24, align 4
  br label %25

25:                                               ; preds = %23, %21
  store i32 0, i32* %4, align 4
  br label %26

26:                                               ; preds = %25, %13
  %27 = load i32, i32* %4, align 4
  ret i32 %27
}

declare dso_local %struct.ccport* @find_port(%struct.ccdata*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
